crates/python_parser/src/snapshots/python_parser__string__tests__backspace_alias.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..15,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..15,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..15,
                                value: "\u{8}",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
