crates/python_parser/src/snapshots/python_parser__string__tests__bell_alias.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..9,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..9,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..9,
                                value: "\u{7}",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
