crates/python_parser/src/snapshots/python_parser__string__tests__carriage_return_alias.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..21,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..21,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..21,
                                value: "\r",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
