crates/python_parser/src/snapshots/python_parser__string__tests__delete_alias.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..12,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..12,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..12,
                                value: "\u{7f}",
                                flags: StringLiteralFlags {
                                    prefix: Empty,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
