crates/python_parser/src/snapshots/python_parser__string__tests__escape_char_in_byte_literal.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..13,
            value: BytesLiteral(
                BytesLiteralExpr {
                    range: 0..13,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..13,
                                value: [
                                    111,
                                    109,
                                    107,
                                    109,
                                    111,
                                    107,
                                    92,
                                    88,
                                    97,
                                    97,
                                ],
                                flags: BytesLiteralFlags {
                                    prefix: Regular,
                                    triple_quoted: false,
                                },
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
