crates/python_parser/src/snapshots/python_parser__string__tests__escape_octet.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..14,
            value: BytesLiteral(
                BytesLiteralExpr {
                    range: 0..14,
                    value: BytesLiteralValue {
                        inner: Single(
                            BytesLiteral {
                                range: 0..14,
                                value: [
                                    35,
                                    97,
                                    4,
                                    83,
                                    52,
                                ],
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
