crates/python_parser/src/snapshots/python_parser__string__tests__form_feed_alias.snap
---
source: crates/python_parser/src/string.rs
expression: parse_ast
---
[
    Expr(
        ExprStmt {
            range: 0..15,
            value: StringLiteral(
                StringLiteralExpr {
                    range: 0..15,
                    value: StringLiteralValue {
                        inner: Single(
                            StringLiteral {
                                range: 0..15,
                                value: "\u{c}",
                                unicode: false,
                            },
                        ),
                    },
                },
            ),
        },
    ),
]
