crates/python_parser/src/snapshots/python_parser__string__tests__fstring_constant_range.snap
---
source: crates/python_parser/src/string.rs
expression: suite
---
[
    Expr(
        ExprStmt {
            range: 0..22,
            value: FString(
                FStringExpr {
                    range: 0..22,
                    value: FStringValue {
                        inner: Single(
                            FString(
                                FString {
                                    range: 0..22,
                                    elements: [
                                        Literal(
                                            FStringLiteralElement {
                                                range: 2..5,
                                                value: "aaa",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 5..10,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 6..9,
                                                        id: Name("bbb"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                        Literal(
                                            FStringLiteralElement {
                                                range: 10..13,
                                                value: "ccc",
                                            },
                                        ),
                                        Expression(
                                            FStringExpressionElement {
                                                range: 13..18,
                                                expression: Name(
                                                    NameExpr {
                                                        range: 14..17,
                                                        id: Name("ddd"),
                                                        ctx: Load,
                                                    },
                                                ),
                                                debug_text: None,
                                                conversion: None,
                                                format_spec: None,
                                            },
                                        ),
                                        Literal(
                                            FStringLiteralElement {
                                                range: 18..21,
                                                value: "eee",
                                            },
                                        ),
                                    ],
                                    flags: FStringFlags {
                                        prefix: Regular,
                                        triple_quoted: false,
                                    },
                                },
                            ),
                        ),
                    },
                },
            ),
        },
    ),
]
